--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -1901,7 +1901,7 @@ form {
   position: sticky;
   z-index: 30;
   //top: calc(100vh - 158px);
-  bottom: 267px;
+  bottom: 50%;
   padding: 10px;
   width: 80%;
   margin: auto;
