--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -48,9 +48,9 @@ div.plandtl {
         border: 1px solid #b7b7b7;
         padding: 3px 16px;
         border-radius: 16px;
-        background-color: #00000080;
-        color: #fff;
-        font-weight: 800;
+        // background-color: #00000080;
+        color: #000;
+        // font-weight: 800;
 
         &::before {
           content: "keyboard_arrow_left";
@@ -127,7 +127,7 @@ div.plandtl {
 
       .buttons {
         position: absolute;
-        top: 9px;
+        top: 13px;
         right: 18px;
         button {
           all: unset;
