--- a/src/app/pages/planspot/planspot.component.scss
+++ b/src/app/pages/planspot/planspot.component.scss
@@ -1,7 +1,7 @@
 @import "vars";
 @media screen and (min-width: 1025px) {
   #psheader {
-    position: sticky;
+    //position: sticky;
     top: 0;
     display: block;
     z-index: 11;
