--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -576,7 +576,7 @@ $color-grn01: #81c5b4;
     $preview_en: "Preview";
     $height: 32px;
     $radius: 16px;
-    $tabColor: #707070;
+    $tabColor: #81c5b4;
 
     line-height: $height;
     letter-spacing: 0;
@@ -627,7 +627,8 @@ $color-grn01: #81c5b4;
         span::after {
           content: $edit; //$preview;
           padding: 0 65px 0 0;
-          color: $tabColor;
+          //color: $tabColor;
+          color:#707070;
         }
       }
 
@@ -653,7 +654,8 @@ $color-grn01: #81c5b4;
       span::after {
         content: $preview; //$edit;
         padding: 0 0 0 67px;
-        color: $tabColor;
+        //color: $tabColor;
+        color:#707070;
       }
     }
 
