--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -937,6 +937,7 @@ div.plandtl {
             .titleline {
               display: flex;
               flex-direction: column;
+              margin-top: 2px;
 
               .spotname {
                 font-size: 16px;
