--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -42,7 +42,7 @@
       </div>
       <div class="buttons">
         <button mat-icon-button class="plan_add" (click)="onClickAddToPlan()">
-          プランに入れる
+          {{ "AddToPlan" | translate }}
         </button>
       </div>
     </mat-card-header>
