--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.scss
@@ -22,22 +22,22 @@
       }
 
       .input {
-        position:relative;
+        position: relative;
         display: flex;
         width: 100%;
         input {
           width: 100%;
           height: 34px;
           line-height: 34px;
-          border: 1px solid #B7B7B7;
+          border: 1px solid #b7b7b7;
           border-radius: 17px;
           padding: 0 40px 0 27px;
           font-size: 16px;
-          font-weight: 700;
+          //font-weight: 700;
           -webkit-appearance: none;
           text-overflow: ellipsis;
           color: #666;
-          &::placeholder{
+          &::placeholder {
             font-weight: normal;
           }
         }
@@ -63,7 +63,6 @@
         }
       }
 
-
       &.switch {
         $r: 4px;
         margin: 0.9em 0 0.2em;
@@ -79,14 +78,14 @@
           justify-content: center;
           align-items: center;
 
-          $boder-width:2px;
+          $boder-width: 2px;
 
           input {
             all: unset;
             position: absolute;
             opacity: 0;
 
-            +label {
+            + label {
               color: #fff;
               cursor: pointer;
               display: flex;
@@ -105,7 +104,7 @@
             }
 
             &#spot {
-              &:checked+label {
+              &:checked + label {
                 background: #679ecf;
                 //border-radius: 12px 0 0 12px;
                 border: $boder-width solid #386389;
@@ -113,15 +112,15 @@
             }
 
             &#plan {
-              &:checked+label {
-                background: #FDB750;
+              &:checked + label {
+                background: #fdb750;
                 //border-radius: 0 12px 12px 0;
                 border: $boder-width solid #ae8200;
               }
             }
 
             &#all {
-              &:checked+label {
+              &:checked + label {
                 //background:#797E86;
                 background: #de7274;
                 //border-radius: $r 0 0 $r;
@@ -130,10 +129,10 @@
             }
 
             &#google {
-              &:checked+label {
+              &:checked + label {
                 //background: #aeaeae;
                 //border-radius: 0 $r $r 0;
-                border:$boder-width solid rgb(174, 174, 174);
+                border: $boder-width solid rgb(174, 174, 174);
               }
             }
           }
@@ -142,7 +141,7 @@
             text-align: center;
             width: 74px;
 
-            &.all{
+            &.all {
               background: #de7274;
               border: $boder-width solid #fff;
             }
@@ -150,7 +149,7 @@
             &.plan {
               //width: 58px;
               position: relative;
-              background: #FDB750;
+              background: #fdb750;
               border: $boder-width solid #fff;
 
               &::before {
@@ -158,7 +157,8 @@
                 display: inline-block;
                 width: 15px;
                 height: 14px;
-                background: url("../../../../../assets/img/pref_plan.svg") no-repeat;
+                background: url("../../../../../assets/img/pref_plan.svg")
+                  no-repeat;
                 vertical-align: middle;
                 margin-left: 2px;
               }
@@ -185,7 +185,8 @@
                 display: inline-block;
                 width: 11px;
                 height: 14px;
-                background: url("../../../../../assets/img/pref_spot.svg") no-repeat;
+                background: url("../../../../../assets/img/pref_spot.svg")
+                  no-repeat;
                 vertical-align: middle;
                 margin-right: 2px;
               }
@@ -203,14 +204,15 @@
 
             &.google {
               //background: #aeaeae;
-              border:$boder-width solid #eee;
+              border: $boder-width solid #eee;
               //width: 36px;
               &::before {
                 content: "";
                 display: inline-block;
                 width: 39px;
                 height: 14px;
-                background: url("../../../../../assets/img/logo_google_icon.svg") no-repeat;
+                background: url("../../../../../assets/img/logo_google_icon.svg")
+                  no-repeat;
                 background-size: contain;
                 vertical-align: middle;
                 margin-right: 2px;
@@ -220,7 +222,6 @@
           }
         }
       }
-
 
       &.info {
         display: flex;
@@ -243,7 +244,6 @@
 
           ::ng-deep {
             .mat-form-field-wrapper {
-
               padding-bottom: 0;
 
               .mat-form-field-infix {
@@ -264,7 +264,6 @@
           }
 
           @media screen and (min-width: 1025px) {
-
             flex-basis: 200px;
 
             ::ng-deep {
@@ -276,8 +275,8 @@
                 }
 
                 .mat-form-field-appearance-outline .mat-form-field-outline {
-                  color: rgba(0, 0, 0, .12);
-                  border: 0
+                  color: rgba(0, 0, 0, 0.12);
+                  border: 0;
                 }
               }
             }
@@ -317,9 +316,6 @@
           }
         }
 
-
-
-
         // button{
         //   border: none;
         //   flex-basis: 96px;
@@ -340,8 +336,6 @@
         //   background-image: url("../../../../../assets/img/btn_plan.svg");
         //   background-repeat: no-repeat;
         // }
-
-
       }
 
       &.result {
@@ -374,7 +368,7 @@
             width: 35%;
 
             &::before {
-              content: url('../../../../../assets/img/pop_area.svg') !important;
+              content: url("../../../../../assets/img/pop_area.svg") !important;
               width: 9px;
               height: 16px;
               padding-right: 2px;
@@ -386,7 +380,7 @@
             border-right: none;
 
             &::before {
-              content: url('../../../../../assets/img/pop_keyword.svg') !important;
+              content: url("../../../../../assets/img/pop_keyword.svg") !important;
               width: 12px;
               height: 16px;
               padding-right: 2px;
@@ -467,7 +461,7 @@
           width: 35%;
 
           &::before {
-            content: url('../../../../../assets/img/pop_area.svg') !important;
+            content: url("../../../../../assets/img/pop_area.svg") !important;
             width: 9px;
             height: 11px;
             padding-right: 2px;
@@ -479,7 +473,7 @@
           border-right: none;
 
           &::before {
-            content: url('../../../../../assets/img/pop_keyword.svg') !important;
+            content: url("../../../../../assets/img/pop_keyword.svg") !important;
             width: 12px;
             height: 13px;
             padding-right: 2px;
