--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -237,7 +237,8 @@
         <mat-list>
           <mat-list-item class="bottom-view">
             <span class="note">
-              {{ "NotPostedRemoju" | translate }}
+              {{ "NotPostedRemoju" | translate }}<br />
+              {{ "NotPostedRemoju2" | translate }}
             </span>
             <button
               *ngIf="!myFavorite"
