--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -458,10 +458,11 @@ div.banner {
         // height: 26px;
         align-items: center;
         position: relative;
-        white-space: nowrap;
+        //white-space: nowrap;
 
         ::ng-deep .mat-list-item-content {
           flex-direction: column;
+          align-items: baseline;
 
           .row {
             display: flex;
