--- a/src/app/pages/planspot/planspot.component.scss
+++ b/src/app/pages/planspot/planspot.component.scss
@@ -6,6 +6,11 @@
     display: block;
     z-index: 11;
   }
+  // #container {
+  //   height: 100%;
+  //   overflow-y: scroll;
+  //   position: relative;
+  // }
 }
 
 ::ng-deep {
