--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -7,7 +7,7 @@ div.banner {
 }
 //::ng-deep .mat-card{
 #planspot-list-item {
-  padding: 0;
+  padding: 4px 0 0 0;
 
   .header {
     margin: 0 16px 4px;
