--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -28,6 +28,7 @@
     [lang]="lang"
     [index]="i"
     [myPlanSpots]="myPlanSpots"
+    [banners]="banners"
     (linked)="linktoDetail($event)"
     (addMyPlan)="addMyPlan($event)"
     (setFav)="setFavorite($event)"
