--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -39,18 +39,19 @@ div.plandtl {
     position: relative;
     .link {
       font-size: 14px;
-      padding: 12px 9px;
+      padding: 16px 9px;
       display: flex;
       justify-content: space-between;
-      cursor: pointer;
+      //cursor: pointer;
 
       .frame {
         border: 1px solid #b7b7b7;
-        padding: 3px 16px;
+        padding: 4px 16px;
         border-radius: 16px;
         // background-color: #00000080;
         color: #000;
         // font-weight: 800;
+        cursor: pointer;
 
         &::before {
           content: "keyboard_arrow_left";
@@ -140,6 +141,7 @@ div.plandtl {
           font-weight: 800;
           font-size: 14px;
           text-align: center;
+          cursor: pointer;
         }
       }
     }
