--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -395,7 +395,7 @@
             id="switch-tran"
             (click)="onClickTran()"
             x
-            [checked]="row?.isCar"
+            [checked]="!row?.isCar"
             [disabled]="!row"
           />
           <label for="switch-tran"><span></span></label>
