--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -12,7 +12,7 @@
   (reset)="conditionReset()"
 >
 </app-planspot-selector>
-<div *ngIf="condition.select !== 'google'" class="list-header">
+<div *ngIf="condition?.select !== 'google'" class="list-header">
   {{ "PlanSpotList" | translate }}
 </div>
 <app-planspot-list
