--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -376,7 +376,7 @@ form {
 
     .lt {
       display: flex;
-      align-items: center;
+      //align-items: center;
 
       span {
         white-space: nowrap;
@@ -819,8 +819,9 @@ form {
       align-items: center;
       font-size: 16px;
       color: $color-gry06;
-      padding-left: 8px;
+      padding-left: 24px;
       width: 35%;
+      margin-left: 10px;
 
       &::before {
         content: url("../../../assets/img/icon_delete.svg");
@@ -853,6 +854,7 @@ form {
         flex-direction: column;
         height: 40px;
         justify-content: center;
+        padding-left: 24px;
 
         span {
           line-height: 1;
