--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -25,7 +25,7 @@
   </mat-card>
   <mat-card id="nolist" *ngIf="!isList && condition.select === 'google'">
     <mat-card-content>
-      <!-- {{ "GoogleSearchAny" | translate }}<br /> -->
+      {{ "GoogleSearchAny" | translate }}<br />
       {{ "ReplaceKeyword" | translate }}<br />
       {{ "includedPlan" | translate }}
     </mat-card-content>
