--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -1,87 +1,36 @@
-<mat-card>
-  <mat-card-content>
-    <h1>guide</h1>
-    <!-- <ul>
-      <li><span>Point1</span>みんなのおすすめを参考に行きたい場所を探す</li>
-      <li><span>Point2</span>プランBOXを開いて、自分だけの旅プランを作る</li>
-      <li><span>Point3</span>写真やコメントを追加して旅のしおりを編集</li>
-      <li><span>Point4</span>みんなにシェアして楽しむ</li>
-    </ul> -->
+<div class="container">
+  <div class="section top">
+    <img
+      class="logo"
+      src="../../../../../assets/img/remoju-logo-b.svg"
+      alt=""
+    />
+    <div class="caption">次はどこへ行く?</div>
+  </div>
 
-    <ul>
-      <li>
-        <span>Step1</span>
-        <h2>行きたい場所を見つけて</h2>
-        <div class="caption">
-          みんなのおすすめプランやスポットを見たり、行きたい場所を検索して、
-          行ってみたい場所をプランBOXに入れてみよう
-        </div>
-        <video
-          autoplay
-          loop
-          muted
-          playsinline
-          width="260"
-          src="../../../../assets/images/RPReplay_1.mp4"
-        ></video>
-      </li>
-      <li>
-        <span>Step2</span>
-        <h2>おでかけのプランを作り</h2>
-        <ul>
-          <li>プランBOXを開けば、おでかけの計画がカンタンに作れちゃう</li>
-          <li>
-            移動手段や所用時間も、自宅からホテルまでスポットを最短で周るルートも自動計算してくれる
-          </li>
-        </ul>
-        <video
-          autoplay
-          loop
-          muted
-          playsinline
-          width="260"
-          src="../../../../assets/images/RPReplay_2.mp4"
-        ></video>
-      </li>
-      <li>
-        <span>Step3</span>
-        <h2>写真やメモをUpして、</h2>
-        <ul>
-          <li>つくったプランはマイページに保存</li>
-          <li>
-            後から編集したりイメージにぴったりな写真やコメントもUpして、素敵な休日のしおりが完成
-          </li>
-          <li>
-            おでかけした後に編集すれば、楽しかった時間が思い出として詰まったアルバムにもなる
-          </li>
-        </ul>
-        <video
-          autoplay
-          loop
-          muted
-          playsinline
-          width="260"
-          src="../../../../assets/images/RPReplay_3.mp4"
-        ></video>
-      </li>
-      <li>
-        <span>Step4</span>
-        <h2>みんなにもシェアしよう！</h2>
-        <ul>
-          <li>魅力的な休日プランは、みんなにもシェア</li>
-          <li>
-            URLを知っている人にだけ共有したり、みんなに公開したり、みんなにも魅力的な休日プランを発信しよう！
-          </li>
-        </ul>
-        <video
-          autoplay
-          loop
-          muted
-          playsinline
-          width="260"
-          src="../../../../assets/images/RPReplay_4.mp4"
-        ></video>
-      </li>
-    </ul>
-  </mat-card-content>
-</mat-card>
+  <div class="section step1">
+    <div class="head">
+      <div class="step1-mark">
+        <img src="../../../../../assets/img/guide/step1.png" alt="" />
+      </div>
+      <h1>行きたい場所を見つけて</h1>
+      <p>
+        みんなのおすすめプランやスポットを見たり、行きたい場所を検索して、
+        行ってみたい場所をプランBOXに入れてみよう
+      </p>
+    </div>
+    <div class="screen">
+      <img
+        src="../../../../../assets/img/guide/screen1.png"
+        class="bg"
+        alt=""
+      />
+      <div class="mark cap1">
+        <div class="balloon">任意のキーワードで検索しよう！</div>
+      </div>
+      <div class="mark cap2">
+        <div class="balloon">お気に入りの投稿を見つけてみよう</div>
+      </div>
+    </div>
+  </div>
+</div>
