--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -16,21 +16,69 @@
       <h1>行きたい場所を見つけて</h1>
       <p>
         みんなのおすすめプランやスポットを見たり、行きたい場所を検索して、
-        行ってみたい場所をプランBOXに入れてみよう
+        行ってみたい場所をプランBOXに入れてみよう。
       </p>
     </div>
     <div class="screen">
-      <img
-        src="../../../../../assets/img/guide/screen1.png"
-        class="bg"
-        alt=""
-      />
+      <img src="../../../../../assets/img/guide/body1.png" class="bg" alt="" />
       <div class="mark cap1">
         <div class="balloon">任意のキーワードで検索しよう！</div>
       </div>
       <div class="mark cap2">
         <div class="balloon">お気に入りの投稿を見つけてみよう</div>
       </div>
+      <div class="mark cap3">
+        <div class="balloon">おすすめにないスポットはGoogleで探してみよう</div>
+      </div>
+      <div class="mark cap4">
+        <div class="balloon">このプランを詳しく見る</div>
+      </div>
+      <div class="mark cap5">
+        <div class="balloon">気に入ったプランは、myプランに入れてみよう</div>
+      </div>
+      <div class="mark cap6">
+        <div class="balloon">myプランはここから</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section step2">
+    <div class="head">
+      <div class="step2-mark">
+        <img src="../../../../../assets/img/guide/step2.png" alt="" />
+      </div>
+      <h1>おでかけのプランを作り</h1>
+      <p>
+        プランBOXを開けば、おでかけの計画がカンタンに作れちゃう<br />
+        移動手段や所用時間も、自宅からホテルまでスポットを最短で周るルートも自動計算してくれる
+      </p>
+    </div>
+  </div>
+
+  <div class="section step3">
+    <div class="head">
+      <div class="step3-mark">
+        <img src="../../../../../assets/img/guide/step3.png" alt="" />
+      </div>
+      <h1>写真やメモをUpして、</h1>
+      <p>
+        つくったプランはマイページに保存<br />
+        後から編集したりイメージにぴったりな写真やコメントもUpして、素敵な休日のしおりが完成<br />
+        おでかけした後に編集すれば、楽しかった時間が思い出として詰まったアルバムにもなる
+      </p>
+    </div>
+  </div>
+
+  <div class="section step4">
+    <div class="head">
+      <div class="step4-mark">
+        <img src="../../../../../assets/img/guide/step4.png" alt="" />
+      </div>
+      <h1>みんなにもシェアしよう！</h1>
+      <p>
+        魅力的な休日プランは、みんなにもシェア<br />
+        URLを知っている人にだけ共有したり、みんなに公開したり、みんなにも魅力的な休日プランを発信しよう!
+      </p>
     </div>
   </div>
 </div>
