--- a/src/app/pages/offcial/guide/guide2/guide2.component.scss
+++ b/src/app/pages/offcial/guide/guide2/guide2.component.scss
@@ -11,7 +11,7 @@
     &::before {
       content: "";
       display: inline-block;
-      background-image: url("../../../../assets/img/guide/circle.svg");
+      background-image: url("../../../../../assets/img/guide/circle.svg");
       width: 60px;
       height: 60px;
       background-size: contain;
@@ -34,7 +34,6 @@
     word-wrap: break-word;
     margin: auto;
   }
-
   .section {
     display: flex;
     flex-direction: column;
@@ -114,7 +113,6 @@
       .mark.cap3 {
         top: 90px;
         right: 42px;
-        z-index: 3;
         .balloon {
           right: 0;
         }
@@ -163,69 +161,6 @@
           right: 161px;
         }
       }
-    }
-
-    .arrows {
-      width: 60px;
-      height: 72px;
-      position: absolute;
-      left: 50%;
-      margin-left: -30px;
-      bottom: 170px;
-    }
-
-    /*-scroll down-*/
-    .arrows path {
-      stroke: #b89b7e;
-      fill: transparent;
-      stroke-width: 1px;
-      animation: arrow 2s infinite;
-      -webkit-animation: arrow 2s infinite;
-    }
-
-    @keyframes arrow {
-      0% {
-        opacity: 0;
-      }
-      40% {
-        opacity: 1;
-      }
-      80% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
-
-    @-webkit-keyframes arrow /*Safari and Chrome*/ {
-      0% {
-        opacity: 0;
-      }
-      40% {
-        opacity: 1;
-      }
-      80% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
-
-    .arrows path.a1 {
-      animation-delay: -1s;
-      -webkit-animation-delay: -1s; /* Safari 和 Chrome */
-    }
-
-    .arrows path.a2 {
-      animation-delay: -0.5s;
-      -webkit-animation-delay: -0.5s; /* Safari 和 Chrome */
-    }
-
-    .arrows path.a3 {
-      animation-delay: 0s;
-      -webkit-animation-delay: 0s; /* Safari 和 Chrome */
     }
   }
 }
