--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -6,6 +6,13 @@
       alt=""
     />
     <div class="caption">次はどこへ行く?</div>
+    <div class="scroll">
+      <svg class="arrows">
+        <path class="a1" d="M0 0 L30 32 L60 0"></path>
+        <path class="a2" d="M0 20 L30 52 L60 20"></path>
+        <path class="a3" d="M0 40 L30 72 L60 40"></path>
+      </svg>
+    </div>
   </div>
 
   <div class="section step1">
@@ -53,6 +60,9 @@
         移動手段や所用時間も、自宅からホテルまでスポットを最短で周るルートも自動計算してくれる
       </p>
     </div>
+    <div class="screen">
+      <img src="../../../../../assets/img/guide/body2.png" class="bg" alt="" />
+    </div>
   </div>
 
   <div class="section step3">
@@ -67,6 +77,9 @@
         おでかけした後に編集すれば、楽しかった時間が思い出として詰まったアルバムにもなる
       </p>
     </div>
+    <div class="screen">
+      <img src="../../../../../assets/img/guide/body33.png" class="bg" alt="" />
+    </div>
   </div>
 
   <div class="section step4">
@@ -79,6 +92,9 @@
         魅力的な休日プランは、みんなにもシェア<br />
         URLを知っている人にだけ共有したり、みんなに公開したり、みんなにも魅力的な休日プランを発信しよう!
       </p>
+    </div>
+    <div class="screen">
+      <img src="../../../../../assets/img/guide/body41.png" class="bg" alt="" />
     </div>
   </div>
 </div>
