--- a/src/app/parts/map-infowindow-dialog/map-infowindow-dialog.component.html
+++ b/src/app/parts/map-infowindow-dialog/map-infowindow-dialog.component.html
@@ -4,9 +4,11 @@
       <div class="card-header" (click)="onClickSpotDetail()">
         <ng-container class="spotName">
           <div class="photo">
-            <img [src]="data.pictureUrl"
-            [alt]="data.spotId"
-            [title]="data.spotId" />
+            <img
+              [src]="data.pictureUrl"
+              [alt]="data.spotId"
+              [title]="data.spotId"
+            />
           </div>
           <div class="info">
             <div class="name">
@@ -17,7 +19,7 @@
             </div>
           </div>
         </ng-container>
-<!--        <ng-container class="spotName" *ngIf="data.spotId === 0">
+        <!--        <ng-container class="spotName" *ngIf="data.spotId === 0">
           <div class="photo">
             <img [src]="data.googleSpot.picture_url" />
           </div>
@@ -32,31 +34,41 @@
         </ng-container>-->
       </div>
       <div class="card-bottom">
-        <button mat-raised-button
-                class="myplan-icon-btn"
-                (click)="onClickMapApp()">
+        <button
+          mat-raised-button
+          class="myplan-icon-btn"
+          (click)="onClickMapApp()"
+        >
           <span class="button">
-            <img src="../../../assets/img/icon_direction_ov.svg" alt="">
-          </span>      
+            <img src="../../../assets/img/icon_direction_ov.svg" alt="" />
+          </span>
           <span class="button-text">
             {{ "Directions3" | translate }}
           </span>
         </button>
         <button class="add-to-favorite" (click)="onClickFavorite()">
           <span class="button" *ngIf="!data.isFavorite">
-            <img src="../../../assets/img/icon_bookmark_d.svg" alt="">
+            <img src="../../../assets/img/icon_bookmark_b.svg" alt="" />
           </span>
           <span class="button" *ngIf="data.isFavorite">
-            <img src="../../../assets/img/icon_bookmark_d_on.svg" alt="">
+            <img src="../../../assets/img/icon_bookmark_b_on.svg" alt="" />
           </span>
           <span class="button-text">
             {{ "Favorite" | translate }}
           </span>
         </button>
-        <button class="add-to-plan" *ngIf="data.type !== 3 && (data.isDetail || data.isOhterSpot)" (click)="onClickAddToPlan()">
+        <button
+          class="add-to-plan"
+          *ngIf="data.type !== 3 && (data.isDetail || data.isOhterSpot)"
+          (click)="onClickAddToPlan()"
+        >
           {{ "AddToPlan" | translate }}
         </button>
-        <button class="add-to-plan" *ngIf="!data.isDetail && !data.isOhterSpot" (click)="onClickDelSpot()">
+        <button
+          class="add-to-plan"
+          *ngIf="!data.isDetail && !data.isOhterSpot"
+          (click)="onClickDelSpot()"
+        >
           {{ "RemoveFromPlan" | translate }}
         </button>
       </div>
